--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,9 @@
     <meta name="description" content="Web site created using create-react-app" />
     <!--Google fonts iría aquí-->
     <link rel="stylesheet" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <title>Mi lista de pokemon</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
